--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
-    <title>The Aam Story</title>
+    <title>Rama Mangoes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
